--- a/src/registration.css
+++ b/src/registration.css
@@ -20,6 +20,9 @@ body
 }
 .lower_part
 {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
     text-align: center;
     color:black;
     font-size:150%;
@@ -27,13 +30,14 @@ body
 }   
 .tap
 {
+    display:flex;
+    align-items:flex-end;
   background-color: red;
   border: 5px solid black;
   color:black;
   padding: 15px 32px;
   text-align: center;
   text-decoration:none;
-  display: inline-block;
   font-size: 16px;
   font-weight:bold;
   margin: 4px 2px;
@@ -41,7 +45,4 @@ body
   width:50px;
   height:20px;
 }
-.textpos
-{
 
-}
