--- a/src/components/Login_register/Login_register.css
+++ b/src/components/Login_register/Login_register.css
@@ -1,3 +1,5 @@
+
+
 *{
     margin:0;
     padding:0;
@@ -7,7 +9,7 @@
 {
     height: 100%;
     width: 100%;
-    background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)),url(banner.jpg);
+    background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)),url(../../assets/banner.jpg);
     background-position: center;
     background-size: cover;
     position: absolute;
