--- a/public/aboutus.css
+++ b/public/aboutus.css
@@ -12,7 +12,10 @@ body{
     justify-content: center;
     background-color: #f1f1f1;
 }
+.inner-container ul li{
+    margin: 15px 24px !important;
 
+}
 .about-section{
     background: url(pic.jpg) no-repeat left;
     background-size: 55%;
